[tool.poetry]
name = "tjcloud"
version = "2.5.0"
description = "TJ Palanca Personal Cloud"
authors = ["TJ P <code@tjpalanca.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://tjpalanca.com/tjcloud"
documentation = "https://tjpalanca.com/tjcloud"
repository = "https://github.com/tjpalanca/tjcloud.git"

[tool.poetry.scripts]
enable_firewall = "tjcloud.linode:enable_firewall"
disable_firewall = "tjcloud.linode:disable_firewall"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
tjutils = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
